Fix coin amount underline being invisible.

--- a/src/css/_exchange-widget.scss
+++ b/src/css/_exchange-widget.scss
@@ -1,7 +1,11 @@
 #exchange-widget { background: rgba(0,0,0,.4); display: inline-block;width: 100%;color: #000;padding: 5px 5px 10px 5px; border-radius: 4px;
 	.down-arrow {  width: 40px; height: 40px; background-size: contain; display: block; float: right; border: 1px solid red; }
 	.form-group label.control-label { top: -30px; font-size: 16px; text-transform: capitalize; }
-	input { font-size: 18px; background-image: linear-gradient(#fff, #fff), linear-gradient(#fff, #fff); color: #fff;
+	input { 
+		font-size: 18px; 
+		font-weight: 400;
+		background-image: linear-gradient(0deg, #fff 2px, rgba(156, 39, 176, 0) 0), linear-gradient(0deg, #fff 1px, hsla(0, 0%, 82%, 0) 0);
+		color: #fff;
 		&.is-focused { background-image: linear-gradient(#337ab7, #337ab7), linear-gradient(#D2D2D2, #D2D2D2) !important; }
 	}
 
